--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,21 +1,39 @@
 name: Super-Linter
+ 
+on:
 
-on: 
   push:
-    branches: [ "main" ]
-  pull_request:
+
     branches: [ "main" ]
 
+  pull_request:
+
+    branches: [ "main" ]
+ 
 jobs:
-  lint:
+
+  super-lint:
+
+    name: Lint Code Base
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+
+      - name: Checkout code
+
         uses: actions/checkout@v4
 
-      - name: Lint Code Base
-        uses: super-linter/super-linter@v6
+        with:
+
+          fetch-depth: 0
+ 
+      - name: Run Super-Linter
+
+        uses: super-linter/super-linter@v8.2.1
+
         env:
+
           DEFAULT_BRANCH: main
+
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
