--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0    # REQUIRED to fix shallow repo error
+          fetch-depth: 0
 
       - name: Lint Code Base
-        uses: github/super-linter@v6  # official recommended version
+        uses: github/super-linter@v6
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
